Fixed alignment and add nav to results page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -66,7 +66,7 @@ nav.sitenavigation {
 
 /* main content */
 .content {
-    max-width: 400px;
+    max-width: 600px;
     position: absolute;
     left: 50%;
     top: 30%;
